2019-12-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheetcolumn.c: Revise gtk_sheet_column_set_property;
      remove the "or not g_object" conditions. If the sheet was null then
      gtk_sheet_column_get_index would return for -1 for col AND if is not
      a g_object then the "!gtk_widget_get_realized condition will always
      be true, albeit with noise.

2019-12-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Increase allocation by 1 more than Xt in s_table_add_column,
      otherwise the allocation is not being resized.

    * src/x_fileselect.c: Add ancillary point to uri in x_fileselect_load_file in
      order to release the string returned from g_filename_to_uri.

    * src/x_window.c: Revise x_window_attached_toggle to utilize gtk_sheet_freeze
      and gtk_sheet_thaw to temporarily disable redrawing of the sheet.

2019-12-07 Wiley E. Hill <wileyhill@gmail.com>

    * po/nb.po: Update Norwegian Bokmal translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.
    * po/sr.po: Update Serbian translations.
    * po/sv.po: Update Swedish translations.

2019-12-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_sheet_data.c: Shorten attribute name string in function arguments.

    * src/s_table.c: Revise s_table_add_column to use pointer to reallocated
      memory, new_table, when initializing records. Consolidate loops in
      s_table_destroy; release the row at the end of the first loop.

    * src/s_toplevel.c: Revise function s_toplevel_add_new_attrib to temporarily
      disable redrawing the sheet using gtk_sheet_freeze and gtk_sheet_thaw.

2019-12-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/globals.c: Include glib.h instead of gattrib.h.
